<resources>
    <string name="app_name">CountdownTimers</string>
    <string name="add_error_name">Timer name should have name</string>
    <string name="add_error_date">Entered date is invalid</string>
    <string name="add_error_duplicate">Timer with the same name already exists</string>
</resources>
